# woolly

./: .gitignore  CACHE_DISABLED_BASELINE_REPORT.md  CACHE_PERSISTENCE_INVESTIGATION.md  COMPILATION_FIXES_COMPLETE.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  COMPREHENSIVE_PERFORMANCE_VALIDATION_REPORT.md  CRITICAL_PERFORMANCE_BUG.md  Cargo.toml  DEQUANTIZATION_CACHE_OPTIMIZATION.md  DEQUANTIZATION_OPTIMIZATION_SUMMARY.md  DEQUANTIZATION_TEST_RESULTS.md  FAST_FP32_IMPLEMENTATION_SUMMARY.md  FAST_FP32_VALIDATION_REPORT.md  FFN_SIMD_COMPLETE_FIX_REPORT.md  FFN_SIMD_FIX_SUMMARY.md  FIX_SIMD_DISABLE.md  GGUF_CACHE_FIXED.md  GGUF_CACHE_STATUS.md  INFERENCE_IMPLEMENTATION.md  INTEGRATION_TESTING.md  KERNEL_FUSION_OPTIMIZATION_REPORT.md  OPTIMIZATION_COMPLETION_REPORT.md  OPTIMIZATION_INTEGRATION_COMPLETE.md  OPTIMIZED_CACHE_STRATEGY.md  OPTIMIZED_INFERENCE_DEPLOYMENT_REPORT.md  PERFORMANCE_ACHIEVEMENT_REPORT.md  PERFORMANCE_FIXES.md  PERFORMANCE_IMPROVEMENT_PLAN.md  PERFORMANCE_REPORT.md  PERFORMANCE_STATUS.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_VALIDATION_RESULTS.md  PHASE1_BLAS_ATTENTION_REPORT.md  PHASE1_VALIDATION_REPORT.md  PROPOSED_CACHE_FIX.md  QUANTIZATION_OPTIMIZATION_README.md  QUANTIZATION_OPTIMIZATION_SUMMARY.md  README.md  README_VALIDATOR.md  (+79 more)
.cargo/: config.toml
.claude/: config.json
crates/woolly-bench/: Cargo.toml  README.md
crates/woolly-bench/benches/: comparison.rs  comprehensive_simd_validation.rs  model_loading.rs  parallel_performance.rs  simd_optimization.rs  simd_optimized_benchmark.rs  tensor_ops.rs
crates/woolly-bench/src/: lib.rs  main.rs  runner.rs
crates/woolly-cli/: Cargo.toml  README.md
crates/woolly-cli/src/: config.rs  main.rs  utils.rs
crates/woolly-cli/src/commands/: benchmark.rs  info.rs  mod.rs  run.rs
crates/woolly-core/: Cargo.toml  README.md
crates/woolly-core/src/: aligned_memory_pool.rs  blas_attention.rs  blas_matmul.rs  config.rs  cpu_features.rs  engine.rs  generation.rs  hyper_optimized_engine.rs  integration_test.rs  kv_cache.rs  lib.rs  model_cache.rs  optimized_dequantization.rs  session.rs  tensor_utils.rs  tensor_utils_optimized.rs  tensor_utils_simd.rs  validation.rs
crates/woolly-core/src/generation/: pipeline.rs
crates/woolly-core/src/model/: attention.rs  dequantization_cache.rs  dequantization_cache_test.rs  embedding.rs  fast_initialization.rs  fast_transformer.rs  feedforward.rs  fused_benchmark.rs  fused_kernels.rs  fused_transformer.rs  layer_norm.rs  lazy_loader.rs  lazy_transformer.rs  lazy_transformer.rs.backup  loader.rs  memory_pool.rs  memory_pool_benchmark.rs  memory_pool_enhanced.rs  mod.rs  optimized_quantization.rs  optimized_transformer.rs  parallel_config.rs  performance_test.rs  transformer.rs  ultra_optimized_transformer.rs
crates/woolly-core/src/tokenizer/: bpe.rs  gguf_tokenizer.rs  mod.rs  sentencepiece.rs  vocab.rs
crates/woolly-core/tests/: fused_integration_test.rs  integration_test.rs  parallel_inference_integration.rs  performance_regression.rs  test_simd.rs
crates/woolly-gguf/: Cargo.toml  README.md
crates/woolly-gguf/examples/: inspect.rs  list_tensors.rs  test_dequantize.rs
crates/woolly-gguf/src/: dequantize.rs  error.rs  format.rs  lib.rs  loader.rs  metadata.rs  tensor_info.rs
crates/woolly-gguf/tests/: integration_test.rs  load_model.rs
crates/woolly-mcp/: Cargo.toml  README.md
crates/woolly-mcp/src/: hooks.rs  lib.rs  protocol.rs  types.rs
crates/woolly-mlx/: Cargo.toml
crates/woolly-mlx/benches/: mlx_operations.rs
crates/woolly-mlx/src/: backend.rs  device.rs  error.rs  ffi.rs  lib.rs  platform.rs  storage.rs
crates/woolly-mlx/src/ops/: element_wise.rs  matmul.rs  mod.rs  quantization.rs  reduction.rs  shape_ops.rs
crates/woolly-server/: Cargo.toml  README.md
crates/woolly-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  middleware.rs  server.rs  websocket.rs
crates/woolly-server/src/handlers/: auth.rs  health.rs  inference.rs  mcp.rs  mod.rs  models.rs  optimized_inference.rs  sessions.rs
crates/woolly-server/tests/: integration_tests.rs
crates/woolly-tensor/: Cargo.toml  README.md
crates/woolly-tensor/benches/: performance_validation.rs  simd_benchmarks.rs
crates/woolly-tensor/src/: backend.rs  lib.rs  memory_pool.rs  quantization.rs  shape.rs  tensor.rs  validation.rs
crates/woolly-tensor/src/ops/: binary.rs  matmul.rs  mod.rs  reduce.rs  simd.rs  simd_matmul.rs  simd_optimized.rs  unary.rs
crates/woolly-tensor/src/ops/aarch64/: mod.rs
crates/woolly-tensor/src/ops/x86_64/: avx2.rs  avx512.rs  mod.rs  sse2.rs
crates/woolly-tensor/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
docs/: api-reference.md  desktop-integration.md  desktop-performance.md  getting-started-improved.md  getting-started.md  model-management.md  ole-integration-guide.md  performance.md
docs/examples/: dotnet-integration.md  electron-quick-start.md  flutter-desktop.md  python-desktop.md  tauri-integration.md
examples/: README.md  basic_inference.rs  benchmark_comparison.rs  custom_tokenizer.rs  error_handling.rs  mcp_integration.rs  mlx_backend.rs  performance_benchmark.rs  server_integration.rs  streaming_generation.rs  tensor_operations.rs  websocket_server.rs
examples/desktop/code_assistant/: Cargo.toml
examples/desktop/code_assistant/src/: main.rs
examples/desktop/document_summarizer/: Cargo.toml
examples/desktop/simple_chat/: Cargo.toml
examples/desktop/simple_chat/src/: main.rs
memory/backups/: backup-2025-06-28T18-51-30-835Z.json  backup-2025-06-28T18-51-33-154Z.json  backup-2025-06-28T18-51-35-238Z.json  backup-2025-06-28T18-51-37-419Z.json  backup-2025-06-28T19-23-18-217Z.json  backup-2025-06-28T19-43-16-108Z.json  (+1 more)
tests/: error_handling_integration.rs
validation_results/: report_20250628_121141.html  report_20250628_123942.html  report_20250628_124053.html  report_20250628_144609.html  results_20250628_121141.json  results_20250628_123942.json  results_20250628_124053.json  results_20250628_144609.json
woolly-mcp/: Cargo.toml
(+10 files in other folders)
