[workspace]
resolver = "2"
members = [
    "crates/woolly-core",
    "crates/woolly-tensor",
    "crates/woolly-gguf",
    "crates/woolly-mcp",
    # "crates/woolly-mlx",  # Temporarily disabled for ultra-optimization
    "crates/woolly-bench",
    "crates/woolly-cli",
    "crates/woolly-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Woolly Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/woolly/woolly"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/WebSocket
hyper = { version = "1.5", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"

# JSON-RPC
jsonrpc-core = "18.0"

# URL handling
url = "2.5"

# Collections
dashmap = "6.1"

# HTTP and networking
reqwest = { version = "0.12", features = ["json"] }

# Tensor operations
ndarray = "0.16"
num-traits = "0.2"

# File handling
memmap2 = "0.9"

# Additional workspace dependencies
byteorder = "1.5"
half = "2.4"
bytemuck = "1.16"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
rayon = "1.9"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

# SIMD compilation flags are set via .cargo/config.toml instead