[package]
name = "woolly-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) implementation for Woolly"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP/WebSocket
hyper = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }

# JSON-RPC
jsonrpc-core = { workspace = true }

# URL handling
url = { workspace = true }

# Collections
dashmap = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Additional dependencies
bytes = "1.8"
futures = "0.3"
pin-project = "1.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }