[package]
name = "woolly-tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tensor operations library for Woolly LLM"

[dependencies]
# External dependencies from workspace
ndarray = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

# Additional tensor-specific dependencies
half = { version = "2.4", optional = true }
rayon = { version = "1.10", optional = true }
bytemuck = "1.16"
lru = "0.12"
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
approx = "0.5"

[features]
default = ["parallel", "f16"]
parallel = ["dep:rayon"]
f16 = ["dep:half"]
cuda = []
metal = []