[package]
name = "woolly-code-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
woolly-core = { path = "../../../crates/woolly-core" }
woolly-server = { path = "../../../crates/woolly-server" }

# GUI
iced = { version = "0.12", features = ["tokio", "debug"] }

# Code highlighting
syntect = "5.1"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
once_cell = "1.19"

# File watching
notify = "6.1"

# Clipboard
arboard = "3.3"