[package]
name = "woolly-document-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
woolly-core = { path = "../../../crates/woolly-core" }

# GUI - using Dioxus for a modern React-like experience
dioxus = "0.5"
dioxus-desktop = "0.5"

# Document parsing
pdf-extract = "0.7"
docx-rs = "0.4"
scraper = "0.18"  # HTML parsing
encoding_rs = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File handling
rfd = "0.13"  # File dialogs
mime_guess = "2.0"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress indication
indicatif = "0.17"