[package]
name = "woolly-simple-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
woolly-core = { path = "../../../crates/woolly-core" }
woolly-server = { path = "../../../crates/woolly-server" }

# UI framework
egui = "0.24"
eframe = "0.24"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"

[features]
default = ["persistence"]
persistence = ["eframe/persistence"]